rename dto set settingDto to non-static move responseEntity from service to controller