@@ -1,107 +1,96 @@
 package com.springboot.exercise.springboot_exersice_project.service;
 
-import java.net.URI;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.server.ResponseStatusException;
-import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
-import com.springboot.exercise.springboot_exersice_project.dto.UserGetDto;
+import com.springboot.exercise.springboot_exersice_project.dto.GetUserRs;
 import com.springboot.exercise.springboot_exersice_project.entity.UserDetails;
-import com.springboot.exercise.springboot_exersice_project.repository.CommentRepository;
-import com.springboot.exercise.springboot_exersice_project.repository.PostRepository;
 import com.springboot.exercise.springboot_exersice_project.repository.UserDetailsRepository;
+
+import jakarta.transaction.Transactional;
 
 
 @Service
 public class UserServiceImp implements UserService {
     @Autowired
     private UserDetailsRepository userDetailsRepository;
-    @Autowired
-    private PostRepository postRepository;
-    @Autowired
-    private CommentRepository commentRepository;
 
     @Override
-    public List<UserGetDto> getAllUsers() {
+    public List<GetUserRs> getAllUsers() {
         // return userDetailsRepository.findAll();
 
         List<UserDetails> userDetails = userDetailsRepository.findAll();
         
         return userDetails.stream()
-                        .map(UserServiceImp::settingDto)
-                        .collect(Collectors.toList());
+                        .map(user -> this.settingDto(user))
+                        .toList();
     }
 
+    // TODO: 還是建立一個 ResourceNotFoundException
     @Override
-    public UserGetDto getUser(Integer id) {
+    public GetUserRs getUser(Integer id) {
         // 想說也不一定要自定義一個 Exception, 就用既有的 ResponseStatusException, 然後改 response body foramt 就好
         UserDetails user = userDetailsRepository.findById(id).orElseThrow(
-            () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "UserId " + id + " not found")
+            () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "userId " + id + " not found")
         );
 
-        return UserServiceImp.settingDto(user);
+        return this.settingDto(user);
     }
 
     @Override
-    public ResponseEntity<UserGetDto> createUser(UserDetails user) {
-        UserDetails userSaved = userDetailsRepository.save(user);
-        URI location = ServletUriComponentsBuilder
-                        .fromCurrentRequest()
-                        .path("/{id}")
-                        .buildAndExpand(userSaved.getId())
-                        .toUri();
-        return ResponseEntity.created(location).build();
+    public GetUserRs createUser(UserDetails user) {
+        return this.settingDto(userDetailsRepository.save(user));
     }
 
     @Override
-    public UserGetDto getUserByBody(Map<String, Object> body) {
+    public GetUserRs getUserByBody(String id, String name) {
         UserDetails user;
 
-        if (body.containsKey("id")) {
-            Integer key = (Integer) body.get("id");
+        if (id != null) {
+            Integer key = Integer.parseInt(id);
             user = userDetailsRepository.findById(key).orElseThrow(
-                () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "UserId " + key + " not found")
+                () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "userId " + key + " not found")
             );
         }
-        else if (body.containsKey("name")) {
-            String key = (String) body.get("name");
-            user = userDetailsRepository.findByName(key).orElseThrow(
-                () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "UserName " + key + " not found")
+        else if (name != null) {
+            user = userDetailsRepository.findByName(name).orElseThrow(
+                () -> new ResponseStatusException(HttpStatus.NOT_FOUND, "userName " + name + " not found")
             );
         }
         else {
             throw new ResponseStatusException(HttpStatus.NOT_FOUND, "Search key undefined");
         }
         
-        return UserServiceImp.settingDto(user);
+        return this.settingDto(user);
     }
 
+    // TODO: delete, 跨 table 操作, custom 的 repository delete function 都要加 @Transactional
     @Override
-    public ResponseEntity<Void> deleteUser(Integer id) {
+    @Transactional
+    public void deleteUser(Integer id) {
         if (userDetailsRepository.existsById(id)) {
             userDetailsRepository.deleteById(id);
-            return ResponseEntity.noContent().build(); // 成功刪除返回 204 No Content
         } else {
-            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "UserId " + id + " not found");
+            throw new ResponseStatusException(HttpStatus.NOT_FOUND, "userId " + id + " not found");
         }
     }
 
-    static private UserGetDto settingDto(UserDetails user) {
-        UserGetDto userGetDto = new UserGetDto();
+    // TODO: 不用 static
+    private GetUserRs settingDto(UserDetails user) {
+        GetUserRs userGetDto = new GetUserRs();
         userGetDto.setId(user.getId());
         userGetDto.setBirthDate(user.getBirthDate());
         userGetDto.setName(user.getName());
-        List<Integer> postIds = user.getPosts().stream()
-                                    .map(post -> post.getId())
-                                    .collect(Collectors.toList());
-        userGetDto.setPosts(postIds);
+        userGetDto.setPosts(user.getPosts()
+                                .stream()
+                                .map(post -> post.getId())
+                                .toList()
+                            );
         return userGetDto;
     }
 }
